# Search_Engine

./: CMakeLists.txt  README.md  answers.json  main.cpp
include/: searchServer.h
src/: converterjson.cpp  searchServer.cpp
tests/: CMakeLists.txt
